JarFacade.c should not include ctype.h

XMLWordPrintable

        This is a follow-up to JDK-8034857 where it was observed that ctype.h was deliberately not included on Solaris/Linux to avoid using a locale sensitive macro at build time, see:

        http://mail.openjdk.java.net/pipermail/serviceability-dev/2014-February/014221.html

        Unless this is fixed then there is a potential for test/java/lang/instrument/PremainClass/PremainClassTest.java to fail on at least Solaris.

              Assignee:
              Mikael Vidstedt
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: