8035054: JarFacade.c should not include ctype.h

Reviewed-by: alanb